; ModuleID = '/home/carl/AnghaBench/h2o/lib/core/extr_util.c_create_default_accept_data.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/core/extr_util.c_create_default_accept_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_accept_data_t = type { i32 }
%struct.timeval = type { i32 }

@on_accept_timeout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.st_h2o_accept_data_t* (i32*, i32*, i32)* @create_default_accept_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.st_h2o_accept_data_t* @create_default_accept_data(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.timeval, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.st_h2o_accept_data_t*, align 8
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  store i32 %2, i32* %8, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* @on_accept_timeout, align 4
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.st_h2o_accept_data_t* @create_accept_data(i32* %9, i32* %10, i32 %13, i32 %11, i32 4)
  store %struct.st_h2o_accept_data_t* %14, %struct.st_h2o_accept_data_t** %7, align 8
  %15 = load %struct.st_h2o_accept_data_t*, %struct.st_h2o_accept_data_t** %7, align 8
  ret %struct.st_h2o_accept_data_t* %15
}

declare dso_local %struct.st_h2o_accept_data_t* @create_accept_data(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
